--- a/style.css
+++ b/style.css
@@ -478,14 +478,14 @@ figure,
  #help {width: 600px;
     height: 700px;
     position: fixed;
-    top: 150px;
+    top: 200px;
     left: 100px;
     background-color: #EDBC81;
     opacity: 30%;
     border-radius: 20px;}
 
     #bodytexts {position: fixed;
-    top: 170px;
+    top: 220px;
     width: 560px;
     left: 120px;
     color: white;}
@@ -577,14 +577,21 @@ table#t01 th {
     } 
     /*this is for styling the footer*/
     footer {
-    background-color: #000000}}
+    background-color: #000000}
     /*this is for styling helpkit page*/
     #help {
-    top: 310px;
-    left: 210px;}
+    width: 400px;
+    height: 500px;
+    top: 300px;
+    left: 50px;}
+    
     #bodytexts {
-    top: 330px;
-    left: 230px;}
+    top: 320px;
+    width: 380px;
+    left: 60px;}
+    
+    #bodytexts p {
+    font-size: 20px;}}
 
 /*this is for styling the iphone sizes*/    
 @media (max-width:414px){
@@ -721,26 +728,25 @@ table#t01 th {
     #covered {
     width: 370px;
     height: 550px;
-    left: 20px;} 
+    left: 20px;
+        } 
 
     /*this is for styling the footer*/
     footer {
     height: 100px;}
     .fab {
     padding: 5px;}
+
     /*this is for styling helpkit page*/
-    #help {width: 350px;
-    height: 550px;
-    top: 180px;
-    left: 30px;}
-
-    #bodytexts {
+    #help {
     top: 200px;
-    width: 330px;
-    left: 40px;}
-
-    #bodytexts p {
-        font-size: 20px;}
+    left: 17px;
+    width: 380px;}
+        
+    #bodytexts {
+    width: 360px;
+    top: 220px;
+    left: 27px;}
 }
 
 
